Added platformio onewheel config

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,6 +32,28 @@ build_flags =
     -Wl,-lm
 #    -Wl,-lnosys
 
+[env:onewheel_6word]
+; this control type allows the board to be used AS a hoverboard,
+; responding to sensor movements when in hoverboard mode.
+;/ and uses softwareserial for serial control on B2/C9
+platform = ststm32
+framework = stm32cube
+debug_tool = jlink
+board = genericSTM32F103RC
+
+build_flags =
+    -I${PROJECT_DIR}/inc/
+    -I${PROJECT_DIR}/src/hbprotocol/
+    -DUSE_HAL_DRIVER
+    -DSTM32F103xE
+    -Wl,-T${PROJECT_DIR}/STM32F103RCTx_FLASH.ld
+    -Wl,-lc
+    -Wl,-lm
+    -Og
+#    -Wl,-lnosys
+    -D CONTROL_TYPE=5        ; Use HOVERBOARD_WITH_SOFTWARE_SERIAL_B2_C9_6WORDSENSOR from config.h as base for this config
+
+
 
 [env:hoverboard]
 ; this control type allows the board to be used AS a hoverboard,
